# agent-forge

./: .gitignore  CLAUDE.md  CONCEPT.md  README.md  pyproject.toml
docs/: architecture.md  plan.md  session_prompt.md  team-protocol.md
docs/agents/: architect.md  backend_dev.md  devops.md  frontend_dev.md  product_owner.md  qa.md  scout.md  security.md  team_lead.md  tech_writer.md
src/agentforge/: __init__.py  agent_core.py  cli.py  coordinator.py  project_context.py
src/agentforge/kernel/: app.py  container.py  plugin.py
src/agentforge/memory/: __init__.py  schema.py  team_memory.py
src/agentforge/roles/: __init__.py  _base.py  architect.py  backend_dev.py  devops.py  frontend_dev.py  product_owner.py  qa.py  scout.py  security.py  tech_writer.py
src/agentforge/templates/: context.yaml
src/team_infra/: __init__.py  agent_bus.py  agent_core.py  gift.py
src/team_infra/roles/: __init__.py
tests/: test_agent_bus.py  test_cli.py  test_coordinator.py  test_gift.py  test_roles.py  test_roles_phase5.py  test_team_memory.py
